@@ -10,6 +10,7 @@ Audio.UpdateDevices.desc = Updating audio output devices
 
 Channel.Add.desc = Creating new Channel
 Channel.AddFxSend.desc = Creating new effect send
+Channel.EditInstrument.desc = Starting an instrument editor
 Channel.GetFxSends.desc = Getting effect sends on channel {0}
 Channel.LoadEngine.desc = Assigning {0} engine to channel {1}
 Channel.LoadInstrument.desc = Assigning instrument
