@@ -1,3 +1,4 @@
+ChannelScreen.btnEditInstr = Edit
 ChannelScreen.btnEngine = Assign Engine...
 ChannelScreen.btnFxSends = FX sends
 ChannelScreen.btnFxSends.tt = Effect sends
